--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ android {
         // ViewBinding enabled gradle version 3.6.0 (4.0부터 buildFeatures() 사용 가능 )
         enabled = true
     }
+
+    dataBinding{
+        enabled = true
+    }
+
 }
 
 dependencies {
@@ -46,6 +51,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
@@ -55,4 +61,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
     kapt "androidx.lifecycle:lifecycle-compiler:2.3.1"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
+
+
+
 }
