--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,15 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".SettingActivity"
+            android:exported="true" />
+
         <service
             android:name=".functions.ServiceLocation"
             android:enabled="true"
-            android:exported="false"/>
+            android:exported="false" />
+
         <activity android:name=".SendLocationActivity" />
         <activity
             android:name=".MainActivity"
