오류 수정, SettingActivity 추가
<FIN>
multidex 설정 추가로 앱 실행 안되는 오류 수정
디자인 수정
- 버튼 디자인, 동작 추가
SettingActivity 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         applicationId "kr.rabbito.shuttlelocationprojectdriver"
         minSdkVersion 19
         targetSdkVersion 31
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
 
@@ -69,4 +70,5 @@ dependencies {
 
     implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
+    implementation 'androidx.multidex:multidex:2.0.1'
 }
