--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
             android:name=".functions.ServiceLocation"
             android:enabled="true"
             android:exported="false" />
-
+        <service android:name=".functions.ServiceLocation2"
+            android:enabled="true"
+            android:exported="false"/>
         <activity android:name=".SendLocationActivity" />
         <activity
             android:name=".MainActivity"
